# ML

./: CMakeLists.txt  main.cpp  test.py
include/: assertions.h  conversions.h  declarations.h  def.h  exceptions.h  functional.h  index_iterable.h  iterable.h  output.h  printable.h  random.cpp  random.h  string_def.h  tensor.h
include/arrays/: arr.h  arrays.h  farray.h  indices.h  iterators.h
include/collections/: arrays.h  composite_index.h  pair.h  tensor.h
include/common/: assertions.h  declarations.h
include/math/: flat_view.h  function.cpp  function.h  matht.h  random.h  tensor.h  tensor_view.h
include/nn/: function.h  layer.h  network.h  nn.h
include/nn/layers/: fc.h
include/output/: printable.h  to_string.h
src/: exceptions.cpp  functional.cpp  index_iterable.cpp  iterable.cpp  main.cpp  output.cpp  printable.cpp  random.cpp  string_def.cpp  tensor.cpp  to_string.cpp
src/array/: arrays.cpp  indices.cpp
src/collections/: arrays.cpp  composite_index.cpp  tensor.cpp
src/math/: flat_view.cpp  matht.cpp  random.cpp  tensor.cpp  tensor_indices_iterable.cpp  tensor_view.cpp
src/nn/: function.cpp  layer.cpp  network.cpp  nn.cpp
src/nn/layers/: fc.cpp
src/output/: printable.cpp  to_string.cpp
